trunk/librra/python/pyrra.pyx

"""Python bindings to librra

RRA (Remote Replication Agent) is a protocol used to syncronise
data with Windows CE and Windows Mobile devices, and librra
is the open source implementation from the SynCE project.

For more information, go to www.synce.org"""

import sys
import pyrapi2

cdef extern from "stddef.h":
	ctypedef unsigned int  size_t
	ctypedef int  ssize_t

cdef extern from "time.h":
	ctypedef unsigned int time_t

cdef extern from "Python.h":
	object PyString_FromStringAndSize(char *, int)
	int PyString_AsStringAndSize(object, char**, Py_ssize_t*)
	void * PyCObject_AsVoidPtr(object)

cdef extern from "stdlib.h":
	void *malloc(size_t size)
	void *calloc(size_t nmemb, size_t size)
	void free(void *ptr)

cdef extern from "string.h":
	void * memcpy(void * dest, void * src, size_t n)

cdef extern from "stdint.h":
	ctypedef unsigned short int uint16_t
	ctypedef unsigned int uint32_t
	ctypedef unsigned char uint8_t
	
cdef extern from *:
	ctypedef uint8_t* const_uint8_ptr "const uint8_t*"

cdef extern from "synce.h":
	ctypedef uint16_t WCHAR
	ctypedef uint32_t bool
	ctypedef WCHAR *  LPCWSTR
	ctypedef uint32_t DWORD
	char *wstr_to_utf8(LPCWSTR unicode)
	LPCWSTR wstr_from_utf8(char * utf8)
	void wstr_free_string(void *str)

cdef extern from "synce_log.h":
	void synce_log_set_level(int level)

cdef extern from "rapi2.h":
	ctypedef void IRAPISession

cdef extern from "../lib/syncmgr.h":
	ctypedef void  RRA_SyncMgr
	ctypedef struct RRA_SyncMgrType:
		uint32_t	id
		uint32_t	count
		uint32_t	total_size
		uint32_t	time_t
		char		name1[100]
		char		name2[80]

	ctypedef enum RRA_SyncMgrTypeEvent:
		SYNCMGR_TYPE_EVENT_UNCHANGED_h "SYNCMGR_TYPE_EVENT_UNCHANGED"
		SYNCMGR_TYPE_EVENT_CHANGED_h "SYNCMGR_TYPE_EVENT_CHANGED"
		SYNCMGR_TYPE_EVENT_DELETED_h "SYNCMGR_TYPE_EVENT_DELETED"

	ctypedef enum:
		RRA_SYNCMGR_NEW_OBJECT_h "RRA_SYNCMGR_NEW_OBJECT"
		RRA_SYNCMGR_UPDATE_OBJECT_h "RRA_SYNCMGR_UPDATE_OBJECT"

	ctypedef struct _RRA_Uint32Vector:
		pass

	ctypedef bool (*RRA_SyncMgrTypeCallback) (RRA_SyncMgrTypeEvent event, uint32_t type_id, uint32_t count, uint32_t* ids, void* cookie)

	ctypedef ssize_t (*RRA_SyncMgrReader) (uint32_t type_id, unsigned index, uint8_t* data, size_t data_size, void* cookie)

	ctypedef bool (*RRA_SyncMgrWriter) (uint32_t type_id, uint32_t object_id, const_uint8_ptr data, size_t data_size, void* cookie)
	
	RRA_SyncMgr * rra_syncmgr_new()

	void rra_syncmgr_destroy(RRA_SyncMgr * instance)

	bool rra_syncmgr_connect(RRA_SyncMgr * instance, IRAPISession *session)

	void rra_syncmgr_disconnect(RRA_SyncMgr * instance)

	bool rra_syncmgr_is_connected(RRA_SyncMgr * instance)

	uint32_t rra_syncmgr_get_type_count(RRA_SyncMgr * instance)

	RRA_SyncMgrType * rra_syncmgr_get_types(RRA_SyncMgr * instance)

	RRA_SyncMgrType * rra_syncmgr_type_from_id(RRA_SyncMgr * instance, uint32_t type_id)
	RRA_SyncMgrType * rra_syncmgr_type_from_name(RRA_SyncMgr * instance, char* name)

	void rra_syncmgr_subscribe(RRA_SyncMgr * instance, uint32_t type_id,\
                                   RRA_SyncMgrTypeCallback callback,\
                                   void *cookie)

	void rra_syncmgr_unsubscribe(RRA_SyncMgr * instance, uint32_t type_id)

	bool rra_syncmgr_start_events(RRA_SyncMgr * instance)

	bool rra_syncmgr_get_event_descriptor(RRA_SyncMgr * instance)

	bool rra_syncmgr_event_pending(RRA_SyncMgr * instance)

	bool rra_syncmgr_event_wait(RRA_SyncMgr * instance, int timeout, bool * gotEvent)

	bool rra_syncmgr_handle_event(RRA_SyncMgr * instance)

	bool rra_syncmgr_handle_all_pending_events(RRA_SyncMgr * instance)

	bool rra_syncmgr_get_single_object(RRA_SyncMgr * instance, uint32_t type_id,\
                                           uint32_t object_id, uint8_t ** data,\
                                           size_t * count)

	bool rra_syncmgr_get_multiple_objects(RRA_SyncMgr * instance, uint32_t type_id,\
                                              uint32_t c_cnt, uint32_t * c_oids,\
					      RRA_SyncMgrWriter writer,\
					      void *cookie)
	bool rra_syncmgr_put_single_object(RRA_SyncMgr * instance, uint32_t type_id,\
                                           uint32_t object_id, uint32_t flags,\
                                           uint8_t* data, size_t data_size, uint32_t* new_object_id)
	bool rra_syncmgr_put_multiple_objects(RRA_SyncMgr * instance, uint32_t type_id,\
					      uint32_t object_id_count, uint32_t * object_id_array,\
					      uint32_t * recv_object_id_array, uint32_t flags,
                                              RRA_SyncMgrReader reader,\
					      void *cookie)

	void rra_syncmgr_free_data_buffer(uint8_t* buffer)

	bool rra_syncmgr_purge_deleted_object_ids(RRA_SyncMgr * instance, uint32_t type, uint32_t * oids)

	bool rra_syncmgr_mark_object_unchanged(RRA_SyncMgr * instance, uint32_t type_id,\
                                               uint32_t obj_id)

	bool rra_syncmgr_delete_object(RRA_SyncMgr * instance,\
                                       uint32_t type_id,\
                                       uint32_t object_id)

cdef extern from "../lib/matchmaker.h":
	ctypedef void  RRA_Matchmaker

	RRA_Matchmaker * rra_matchmaker_new(IRAPISession *session)
	void rra_matchmaker_destroy(RRA_Matchmaker * instance)
	bool rra_matchmaker_set_current_partner(RRA_Matchmaker * instance, uint32_t index)
	bool rra_matchmaker_get_current_partner(RRA_Matchmaker * instance, uint32_t* index)
	bool rra_matchmaker_get_partner_id(RRA_Matchmaker * instance, uint32_t index, uint32_t* id)
	bool rra_matchmaker_get_partner_name(RRA_Matchmaker * instance, uint32_t index, char** name)
	bool rra_matchmaker_new_partnership(RRA_Matchmaker * instance, uint32_t index)
	bool rra_matchmaker_clear_partnership(RRA_Matchmaker * instance, uint32_t index)
	bool rra_matchmaker_have_partnership_at(RRA_Matchmaker * instance, uint32_t index)
	bool rra_matchmaker_have_partnership(RRA_Matchmaker * instance, uint32_t* index)
	bool rra_matchmaker_create_partnership(RRA_Matchmaker * instance, uint32_t* index)

cdef extern from "../lib/timezone.h":
	ctypedef struct RRA_Timezone:
		pass

	bool rra_timezone_get(RRA_Timezone* timezone, IRAPISession *session)
	time_t rra_timezone_convert_from_utc(RRA_Timezone* tzi, time_t unix_time)
	time_t rra_timezone_convert_to_utc  (RRA_Timezone* tzi, time_t unix_time)
	void rra_timezone_create_id(RRA_Timezone* timezone, char** id)

cdef extern from "../lib/contact.h":
	bool rra_contact_to_vcard(uint32_t id, uint8_t* data, size_t data_size, char** vcard, uint32_t flags, char *codepage)
	bool rra_contact_from_vcard(char* vcard, uint32_t* id, uint8_t** data, size_t* data_size, uint32_t flags, char *codepage)

cdef extern from "../lib/appointment.h":
	bool rra_appointment_to_vevent(uint32_t id, uint8_t* data, size_t data_size, char** vevent, uint32_t flags, RRA_Timezone* tzi, char *codepage)
	bool rra_appointment_from_vevent(char* vevent, uint32_t* id, uint8_t** data, size_t* data_size, uint32_t flags, RRA_Timezone* tzi, char *codepage)

cdef extern from "../lib/task.h":
	bool rra_task_to_vtodo(uint32_t id, uint8_t* data, size_t data_size, char** vtodo, uint32_t flags, RRA_Timezone* tzi, char *codepage)
	bool rra_task_from_vtodo(char* vtodo, uint32_t* id, uint8_t** data, size_t* data_size, uint32_t flags, RRA_Timezone* tzi, char *codepage)

cdef extern from "../lib/file.h":
	bool rra_file_unpack(uint8_t* data, size_t data_size, DWORD *ftype, char **path, uint8_t **file_content, size_t *file_size)
	bool rra_file_pack(DWORD ftype, char* path, uint8_t* file_content, size_t file_size, uint8_t **data, size_t *data_size)


#
# Public constants
#

# flags for RRASession.PutMultipleObjects, from syncmgr.h
RRA_SYNCMGR_NEW_OBJECT     = RRA_SYNCMGR_NEW_OBJECT_h
RRA_SYNCMGR_UPDATE_OBJECT  = RRA_SYNCMGR_UPDATE_OBJECT_h

# event types, from syncmgr.h
SYNCMGR_TYPE_EVENT_UNCHANGED = SYNCMGR_TYPE_EVENT_UNCHANGED_h
SYNCMGR_TYPE_EVENT_CHANGED   = SYNCMGR_TYPE_EVENT_CHANGED_h
SYNCMGR_TYPE_EVENT_DELETED   = SYNCMGR_TYPE_EVENT_DELETED_h

# Constants for use with rra_syncmgr_type_from_name()
RRA_SYNCMGR_TYPE_APPOINTMENT  = "Appointment"
RRA_SYNCMGR_TYPE_CONTACT      = "Contact"
RRA_SYNCMGR_TYPE_FAVORITE     = "Favorite"
RRA_SYNCMGR_TYPE_FILE         = "File"
RRA_SYNCMGR_TYPE_INBOX        = "Inbox"
RRA_SYNCMGR_TYPE_INK          = "Ink"
RRA_SYNCMGR_TYPE_MERLIN_MAIL  = "Merlin Mail"
RRA_SYNCMGR_TYPE_MS_TABLE     = "MS Table"
RRA_SYNCMGR_TYPE_TASK         = "Task"

# from timezone.h
RRA_TIMEZONE_INVALID_TIME = 0xffffffff

# from contact.h
RRA_CONTACT_ID_UNKNOWN  = 0

RRA_CONTACT_NEW     	= 0x1
RRA_CONTACT_UPDATE  	= 0x2

RRA_CONTACT_ISO8859_1	= 0x10
RRA_CONTACT_UTF8	= 0x20

RRA_CONTACT_VERSION_2_1 = 0x100
RRA_CONTACT_VERSION_3_0 = 0x200


# from appointment.h
RRA_APPOINTMENT_ID_UNKNOWN  = 0

RRA_APPOINTMENT_NEW     	= 0x1
RRA_APPOINTMENT_UPDATE  	= 0x2

RRA_APPOINTMENT_ISO8859_1	= 0x10
RRA_APPOINTMENT_UTF8		= 0x20

RRA_APPOINTMENT_VCAL_1_0	= 0x100
RRA_APPOINTMENT_VCAL_2_0	= 0x200


# from task.h
RRA_TASK_ID_UNKNOWN = 0

RRA_TASK_NEW     	= 0x1
RRA_TASK_UPDATE  	= 0x2

RRA_TASK_ISO8859_1	= 0x10
RRA_TASK_UTF8		= 0x20

RRA_TASK_VCAL_1_0	= 0x100
RRA_TASK_VCAL_2_0	= 0x200


# from file.h
RRA_FILE_TYPE_UNKNOWN    = 0x00
RRA_FILE_TYPE_DIRECTORY  = 0x10
RRA_FILE_TYPE_FILE       = 0x20

class RRASyncObjectType(object):
	"""An RRA object type

	An object type that can be synchronised with a device
	using RRA"""
	def __init__(self,id,count,total_size,name1,name2):
		self.id = id
		self.count = count
		self.total_size = total_size
		self.name1 = name1
		self.name2 = name2

class RRAError(Exception):
	"""An error resulting from an RRA call"""
	def __init__(self, rc):
		self.rc = rc

	def __str__(self):
		return str(self.rc)

# callback processing
#
# Callback for types

cdef bool _CB_TypesCallback(RRA_SyncMgrTypeEvent event, uint32_t type, uint32_t count, uint32_t * ids, void *cookie):
	ida=[]
	cdef bool rc
	for i from 0 <= i < count:
		ida.append(ids[i])
	rc=(<object>cookie).CB_TypeCallback(<RRA_SyncMgrTypeEvent> event,type,ida)
	return rc

cdef bool _CB_WriterCallback(uint32_t type_id, uint32_t obj_id, const_uint8_ptr data, size_t data_size, void *cookie):
	pd=[]
	if data_size > 0:
		pd=PyString_FromStringAndSize(<char *>data,data_size)
	return (<object>cookie).CB_ObjectWriterCallback(type_id, obj_id, pd)

cdef ssize_t _CB_ReaderCallback(uint32_t type_id, unsigned index, uint8_t * data, size_t max_size, void *cookie):
	cdef char * pstr
	pd=(<object>cookie).CB_ObjectReaderCallback(type_id, index, max_size)
	rc = len(pd)
	if rc > 0:
		if rc > max_size:
			rc = max_size
		pstr = pd
		memcpy(data,pstr,rc)
#		for i from 0 <= i < rc:
#			data[i] = pstr[i]
	print "returning length rc=%d" % rc
	return rc

cdef class RRASession:
	"""An RRA connection to a Windows Mobile device."""

	cdef RRA_SyncMgr * instance
	cdef bool connected
	cdef uint32_t ntypes
	
	def __cinit__(self):
		self.instance = <RRA_SyncMgr *>rra_syncmgr_new()
		if not self.instance:
			raise RRAError("SyncMgr creation failed")
		self.connected = 0
		self.ntypes = 0

	def __dealloc__(self):
		rra_syncmgr_destroy(self.instance)

	#
	# Connection and disconnection
	#

	def Connect(self, rapisession):
		"""Connect to a device.

		Connect the RRA session to the device attached to the RAPISession
		given as an argument, or the default RAPI connection if none is
		specified. Raises an RRAError on failure."""
		cdef IRAPISession *session

		session = PyCObject_AsVoidPtr(rapisession.rapi_connection)

		self.connected = rra_syncmgr_connect(self.instance, session)
		if self.connected == 0:
			raise RRAError("Connection failed")

		return

	def isConnected(self):
		"""The connection state of the session."""
		return self.connected

	def Disconnect(self):
		"""Disconnect from the device."""
		rra_syncmgr_disconnect(self.instance)
		self.connected=0
		return self.connected

	#
	# Event processing
	#

	def SubscribeObjectEvents(self,type_id):
		"""Subscribe to events.
